<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/bg">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="225dp">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/docreg"
            android:textStyle="bold"
            android:textSize="35dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>
        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="350dp"

            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/email"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>


        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/regbtn"
            android:textColor="@color/white"
            android:background="@drawable/roundbutton"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="225dp"
                android:paddingLeft="95dp"
                android:layout_height="wrap_content"
                android:text="@string/existinguser"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:textColor="@color/purple_700"
                />
        </LinearLayout>

    </LinearLayout>




</LinearLayout>